--- a/src/styles/components/modalRegister.module.css
+++ b/src/styles/components/modalRegister.module.css
@@ -31,6 +31,12 @@
     justify-content: space-between;
 }
 
+select{
+    display: flex;
+    background-color: #e7eaec;
+    margin-bottom: 2rem;
+}
+
 .footerArea{
     display: flex;
     flex-direction: column;
