--- a/src/styles/pages/pageDefault.module.css
+++ b/src/styles/pages/pageDefault.module.css
@@ -52,7 +52,10 @@
         flex-direction: column;
     }
 
-    .buttonArea > Button:not(:last-child){
-        margin-bottom: 1rem;
+}
+
+@media only screen and (max-width: 500px){
+    .buttonArea{
+        width: 100%;
     }
 }
